src/objects/sfsp__AttainmentPlan__c.object
<CustomObject>
    <fields>
        <fullName>sfsp__Period__c</fullName>
        <label>Period</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sfsp__Quota_Month10__c</fullName>
        <label>Quota Month 10</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sfsp__Quota_Month11__c</fullName>
        <label>Quota Month 11</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sfsp__Quota_Month12__c</fullName>
        <label>Quota Month 12</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sfsp__Strategy__c</fullName>
        <label>Strategy</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>sfsp__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>User for which this plan was created</description>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>AttainmentPlans</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Attainment Plan</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Attainment Plans</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>